--- a/src/components/addonRow/addonRow.css
+++ b/src/components/addonRow/addonRow.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     padding: 10px;
-    overflow-y: auto;
+    overflow-y: scroll;
     box-sizing: border-box; 
 }
 
