--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,6 @@
     gap: 10px;
     justify-content: space-between;
 
-    position: fixed;
     width: 100%;
     height: 61px;
     top: 0;
@@ -14,6 +13,7 @@
 
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
 
 .logo{
